# greppy

./: Cargo.toml
.github/workflows/: rust-ci.yml
src/: lib.rs  main.rs
