[package]
name = "greppy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a tool to search for strings in strings"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
